--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,18 @@
 
 # Data files I'm generating
 sandbox/
-data/
 results/
+
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
+*png
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# knitr outputs
+*.pdf
+*.html
+*.docx
