holding off on pushing figures?

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 # Data files I'm generating
 sandbox/
 results/
+figures/
 data/param_map/
+
 
 # knitr and R markdown default cache directories
 /*_cache/
