update gitignore temp dont push figs

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # Data files I'm generating
 sandbox/
 results/
+param_map/
+
+# temp dont push figures
+figures/
 
 # knitr and R markdown default cache directories
 /*_cache/
