--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,20 @@
 .Rproj.user
 .RData
 
-# Data files I'm generating
-sandbox/
+# large results that can't push to GH
 results/Modfits_carehomes
 results/Modfits_noserorev
 results/Modfits_serorev
-results/OLD
+results/Fig_ConceptualFits
 results/SeroDays_Concept
 results/SimCurves_noserorev
 results/SimCurves_serorev
 results/descriptive_results
 results/sero_reversion
+results/OLD
 
+# Data files I'm generating
+sandbox/
 figures/
 data/param_map/
 .drake
