update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ results/SimCurves_noserorev
 results/SimCurves_serorev
 results/descriptive_results
 results/sero_reversion
+results/Rgn_Mod_Stan
 results/OLD
 
 # Data files I'm generating
