fix sweden ageband

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 results/Modfits_carehomes
 results/Modfits_noserorev
 results/Modfits_serorev
+results/Modfits_carehomes
+results/Modfits_ConfirmedDeaths
 results/Fig_ConceptualFits
 results/SeroDays_Concept
 results/SimCurves_noserorev
