--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ results/descriptive_results
 results/descriptive_figures
 results/sero_reversion
 results/Rgn_Mod_Stan
-results/OLD
 reports/final_reports
+OLD/
 
 # Data files I'm generating
 sandbox/
