--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,13 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     tidyverse,
-    stringr
+    stringr,
+    Rstan,
+    cowplot, 
+    survival,
+    survminer,
+    fitdistr,
+    drake
 Remotes:
     mrc-ide/COVIDCurve
+    mrc-ide/DrJacoby
