--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ results/descriptive_figures
 results/sero_reversion
 results/Rgn_Mod_Stan
 reports/final_reports
+results/lognormalmods/
 OLD/
 
 # internal
